vlib/v/checker/tests/sum_type_mutable_cast_err.vv
type Abc = int | string

struct Bar {
mut:
	a Abc
}

struct Foo {
	b Bar
}

struct Bar2 {
	a Abc
}

struct Foo2 {
	b Bar2
}

fn main() {
	mut x := Abc(0)
	if x is int {
		_ := x + 5
	}
	f := Foo{Bar{Abc(0)}}
	if f.b.a is int {
		_ := f.b.a + 5
	}
	mut f2 := Foo2{Bar2{Abc(0)}}
	if f2.b.a is int {
		_ := f.b.a + 5
	}
}
